--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "main": "index.js",
   "scripts": {
     "build": "cd client && npm run build",
-    "install-client": "cd client && npm install --only=dev",
+    "install-client": "cd client && npm install",
     "heroku-postbuild": "npm run install-client && npm run build",
     "serve": "nodemon --inspect --exec babel-node src/server.js",
     "start": "node dist/server.js",
